--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,9 @@
   left: 40%;
   top: 20%;
   padding: 20px;
+  z-index: 2;
+  box-shadow: 0px 10px 20px;
+  background-color: #bbc9a193;
 }
 
 .input-box label {
@@ -26,7 +29,7 @@
   left: 10px;
   width: 80%;
   background-color: inherit;
-  border-radius: 20%;
+  border-radius: 2px;
   height: 1.5em;
   border-width: 0;
   margin-top: -15px;
